Fix build errors

--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "prepare": "tsc -p tsconfig.build.json",
     "build": "tsc -p tsconfig.build.json",
     "test": "nyc --extension .ts --reporter=lcov --reporter=text-summary npm run test:unit",
-    "test:unit": "mocha -- --require ts-node/register test/*-test.ts",
-    "lint": "eslint ./src ./test",
-    "lint:fix": "eslint --fix ./src ./test"
+    "test:unit": "mocha -- --require ts-node/register test/*-test.ts"
   },
   "dependencies": {
     "miniget": "^4.2.2",
@@ -34,7 +32,7 @@
   },
   "devDependencies": {
     "@types/mocha": "^7.0.0",
-    "@types/node": "^17.0.8",
+    "@types/node": "^18.13.0",
     "@types/sax": "^1.0.1",
     "@types/sinon": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
